--- a/lib/app/home/css/news.css
+++ b/lib/app/home/css/news.css
@@ -15,21 +15,11 @@ a {
 }
 
 .swiper-container .more {
-	background-color: rgba(100, 100, 100, 0.5);
+	/* background-color: rgba(100, 100, 100, 0.5); */
 	position: absolute;
 	z-index: 10;
 	right: 2px;
 	bottom: 0px;
-	position: absolute;
-}
-
-.swiper-container .more {
-	background-color: rgba(0, 0, 0, 0.9);
-	position: absolute;
-	z-index: 10;
-	right: 2px;
-	bottom: 0px;
-	position: absolute;
 	position: absolute;
 }
 
