--- a/lib/app/home/css/news.css
+++ b/lib/app/home/css/news.css
@@ -4,25 +4,30 @@ a {
 	text-decoration: none;
 }
 
-.module-icon{
+.module-icon {
 	width: 4em;
 	height: 4em;
 }
 
 .swiper-image {
-    
+	
 }
 
 .ui-li-has-count .ui-li-count {
-    /* font-size: 16px; */
-    font-weight: 700;
+	/* font-size: 16px; */
+	font-weight: 700;
+}
+
+.ui-li-has-count .ui-btn-inner a.ui-link-inherit, .ui-li-static.ui-li-has-count,
+	.ui-li-divider.ui-li-has-count {
+	padding-right: 85px;
 }
 
 .ui-date-item {
-    border: none;
-    background: transparent;
-    background-image: none;
-    font-size: 2em;
+	border: none;
+	background: transparent;
+	background-image: none;
+	font-size: 2em;
 }
 
 .swiper-container {
@@ -36,9 +41,9 @@ a {
 }
 
 .swiper-container .more {
-	background-color: rgba(127,127,127,0.5);
+	background-color: rgba(127, 127, 127, 0.5);
 	position: absolute;
-	padding-left:5px;
+	padding-left: 5px;
 	z-index: 10;
 	right: 10px;
 	bottom: 0px;
@@ -46,7 +51,7 @@ a {
 }
 
 .swiper-slide .title {
-	background-color: rgba(127,127,127,0.5);
+	background-color: rgba(127, 127, 127, 0.5);
 	overflow: hidden;
 	white-space: nowrap;
 	text-align: left;
