--- a/assets/jquery.mobile-sugon.css
+++ b/assets/jquery.mobile-sugon.css
@@ -13,17 +13,17 @@
 /* f
 -----------------------------------------------------------------------------------------------------------*/
 .ui-bar-f {
-	border: 1px solid 		#b01f24 /*{a-bar-border}*/;
-	background: 			#b01f24 /*{a-bar-background-color}*/;
+	border: 1px solid 		#3398CC /*{a-bar-border}*/;
+	background: 			#3398CC /*{a-bar-background-color}*/;
 	color: 					#F8F5F5 /*{a-bar-color}*/;
 	font-weight: bold;
 	text-shadow: 0 /*{a-bar-shadow-x}*/ -1px /*{a-bar-shadow-y}*/ 1px /*{a-bar-shadow-radius}*/ #000 /*{a-bar-shadow-color}*/;
-	background-image: -webkit-gradient(linear, left top, left bottom, from( #b01f24 /*{a-bar-background-start}*/), to( #b01f24 /*{a-bar-background-end}*/)); /* Saf4+, Chrome */
-	background-image: -webkit-linear-gradient( #b01f24 /*{a-bar-background-start}*/, #b01f24 /*{a-bar-background-end}*/); /* Chrome 10+, Saf5.1+ */
-	background-image:    -moz-linear-gradient( #b01f24 /*{a-bar-background-start}*/, #b01f24 /*{a-bar-background-end}*/); /* FF3.6 */
-	background-image:     -ms-linear-gradient( #b01f24 /*{a-bar-background-start}*/, #b01f24 /*{a-bar-background-end}*/); /* IE10 */
-	background-image:      -o-linear-gradient( #b01f24 /*{a-bar-background-start}*/, #b01f24 /*{a-bar-background-end}*/); /* Opera 11.10+ */
-	background-image:         linear-gradient( #b01f24 /*{a-bar-background-start}*/, #b01f24 /*{a-bar-background-end}*/);
+	background-image: -webkit-gradient(linear, left top, left bottom, from( #3398CC /*{a-bar-background-start}*/), to( #3398CC /*{a-bar-background-end}*/)); /* Saf4+, Chrome */
+	background-image: -webkit-linear-gradient( #3398CC /*{a-bar-background-start}*/, #3398CC /*{a-bar-background-end}*/); /* Chrome 10+, Saf5.1+ */
+	background-image:    -moz-linear-gradient( #3398CC /*{a-bar-background-start}*/, #3398CC /*{a-bar-background-end}*/); /* FF3.6 */
+	background-image:     -ms-linear-gradient( #3398CC /*{a-bar-background-start}*/, #3398CC /*{a-bar-background-end}*/); /* IE10 */
+	background-image:      -o-linear-gradient( #3398CC /*{a-bar-background-start}*/, #3398CC /*{a-bar-background-end}*/); /* Opera 11.10+ */
+	background-image:         linear-gradient( #3398CC /*{a-bar-background-start}*/, #3398CC /*{a-bar-background-end}*/);
 }
 .ui-bar-f,
 .ui-bar-f input,
@@ -90,34 +90,34 @@
 	color: #2489ce /*{a-body-link-active}*/;
 }
 .ui-btn-up-f {
-	border: 1px solid 		#b01f24 /*{c-bup-border}*/;
-	background: 			#b01f24 /*{c-bup-background-color}*/;
+	border: 1px solid 		#3398CC /*{c-bup-border}*/;
+	background: 			#3398CC /*{c-bup-background-color}*/;
 	font-weight: bold;
 	color: 					#F8F5F5 /*{c-bup-color}*/;
-	text-shadow: 0 /*{c-bup-shadow-x}*/ 1px /*{c-bup-shadow-y}*/ 0 /*{c-bup-shadow-radius}*/ #b01f24 /*{c-bup-shadow-color}*/;
-	background-image: -webkit-gradient(linear, left top, left bottom, from( #b01f24 /*{c-bup-background-start}*/), to( #b01f24 /*{c-bup-background-end}*/)); /* Saf4+, Chrome */
-	background-image: -webkit-linear-gradient( #b01f24 /*{c-bup-background-start}*/, #b01f24 /*{c-bup-background-end}*/); /* Chrome 10+, Saf5.1+ */
-	background-image:    -moz-linear-gradient( #b01f24 /*{c-bup-background-start}*/, #b01f24 /*{c-bup-background-end}*/); /* FF3.6 */
-	background-image:     -ms-linear-gradient( #b01f24 /*{c-bup-background-start}*/, #b01f24 /*{c-bup-background-end}*/); /* IE10 */
-	background-image:      -o-linear-gradient( #b01f24 /*{c-bup-background-start}*/, #b01f24 /*{c-bup-background-end}*/); /* Opera 11.10+ */
-	background-image:         linear-gradient( #b01f24 /*{c-bup-background-start}*/, #b01f24 /*{c-bup-background-end}*/);
+	text-shadow: 0 /*{c-bup-shadow-x}*/ 1px /*{c-bup-shadow-y}*/ 0 /*{c-bup-shadow-radius}*/ #3398CC /*{c-bup-shadow-color}*/;
+	background-image: -webkit-gradient(linear, left top, left bottom, from( #3398CC /*{c-bup-background-start}*/), to( #3398CC /*{c-bup-background-end}*/)); /* Saf4+, Chrome */
+	background-image: -webkit-linear-gradient( #3398CC /*{c-bup-background-start}*/, #3398CC /*{c-bup-background-end}*/); /* Chrome 10+, Saf5.1+ */
+	background-image:    -moz-linear-gradient( #3398CC /*{c-bup-background-start}*/, #3398CC /*{c-bup-background-end}*/); /* FF3.6 */
+	background-image:     -ms-linear-gradient( #3398CC /*{c-bup-background-start}*/, #3398CC /*{c-bup-background-end}*/); /* IE10 */
+	background-image:      -o-linear-gradient( #3398CC /*{c-bup-background-start}*/, #3398CC /*{c-bup-background-end}*/); /* Opera 11.10+ */
+	background-image:         linear-gradient( #3398CC /*{c-bup-background-start}*/, #3398CC /*{c-bup-background-end}*/);
 }
 .ui-btn-up-f:visited,
 .ui-btn-up-f a.ui-link-inherit {
 	color: 					#fff /*{a-bup-color}*/;
 }
 .ui-btn-hover-f {
-	border: 1px solid 		#b01f24 /*{a-bhover-border}*/;
-	background: 			#b01f24 /*{a-bhover-background-color}*/;
+	border: 1px solid 		#3398CC /*{a-bhover-border}*/;
+	background: 			#3398CC /*{a-bhover-background-color}*/;
 	font-weight: bold;
 	color: 					#F8F5F5 /*{a-bhover-color}*/;
 	text-shadow: 0 /*{a-bhover-shadow-x}*/ 1px /*{a-bhover-shadow-y}*/ 1px /*{a-bhover-shadow-radius}*/ #111 /*{a-bhover-shadow-color}*/;
-	background-image: -webkit-gradient(linear, left top, left bottom, from( #b01f24 /*{a-bhover-background-start}*/), to( #b01f24 /*{a-bhover-background-end}*/)); /* Saf4+, Chrome */
-	background-image: -webkit-linear-gradient( #b01f24 /*{a-bhover-background-start}*/, #b01f24 /*{a-bhover-background-end}*/); /* Chrome 10+, Saf5.1+ */
-	background-image:    -moz-linear-gradient( #b01f24 /*{a-bhover-background-start}*/, #b01f24 /*{a-bhover-background-end}*/); /* FF3.6 */
-	background-image:     -ms-linear-gradient( #b01f24 /*{a-bhover-background-start}*/, #b01f24 /*{a-bhover-background-end}*/); /* IE10 */
-	background-image:      -o-linear-gradient( #b01f24 /*{a-bhover-background-start}*/, #b01f24 /*{a-bhover-background-end}*/); /* Opera 11.10+ */
-	background-image:         linear-gradient( #b01f24 /*{a-bhover-background-start}*/, #b01f24 /*{a-bhover-background-end}*/);
+	background-image: -webkit-gradient(linear, left top, left bottom, from( #3398CC /*{a-bhover-background-start}*/), to( #3398CC /*{a-bhover-background-end}*/)); /* Saf4+, Chrome */
+	background-image: -webkit-linear-gradient( #3398CC /*{a-bhover-background-start}*/, #3398CC /*{a-bhover-background-end}*/); /* Chrome 10+, Saf5.1+ */
+	background-image:    -moz-linear-gradient( #3398CC /*{a-bhover-background-start}*/, #3398CC /*{a-bhover-background-end}*/); /* FF3.6 */
+	background-image:     -ms-linear-gradient( #3398CC /*{a-bhover-background-start}*/, #3398CC /*{a-bhover-background-end}*/); /* IE10 */
+	background-image:      -o-linear-gradient( #3398CC /*{a-bhover-background-start}*/, #3398CC /*{a-bhover-background-end}*/); /* Opera 11.10+ */
+	background-image:         linear-gradient( #3398CC /*{a-bhover-background-start}*/, #3398CC /*{a-bhover-background-end}*/);
 }
 .ui-btn-hover-f:visited,
 .ui-btn-hover-f:hover,
@@ -125,17 +125,17 @@
 	color: 					#fff /*{a-bhover-color}*/;
 }
 .ui-btn-down-f {
-	border: 1px solid 		#000 /*{a-bdown-border}*/;
-	background: 			#222 /*{a-bdown-background-color}*/;
+	border: 1px solid 		#3398CC /*{a-bdown-border}*/;
+	background: 			#3398CC /*{a-bdown-background-color}*/;
 	font-weight: bold;
-	color: 					#fff /*{a-bdown-color}*/;
-	text-shadow: 0 /*{a-bdown-shadow-x}*/ 1px /*{a-bdown-shadow-y}*/ 1px /*{a-bdown-shadow-radius}*/ #111 /*{a-bdown-shadow-color}*/;
-	background-image: -webkit-gradient(linear, left top, left bottom, from( #202020 /*{a-bdown-background-start}*/), to( #2c2c2c /*{a-bdown-background-end}*/)); /* Saf4+, Chrome */
-	background-image: -webkit-linear-gradient( #202020 /*{a-bdown-background-start}*/, #2c2c2c /*{a-bdown-background-end}*/); /* Chrome 10+, Saf5.1+ */
-	background-image:    -moz-linear-gradient( #202020 /*{a-bdown-background-start}*/, #2c2c2c /*{a-bdown-background-end}*/); /* FF3.6 */
-	background-image:     -ms-linear-gradient( #202020 /*{a-bdown-background-start}*/, #2c2c2c /*{a-bdown-background-end}*/); /* IE10 */
-	background-image:      -o-linear-gradient( #202020 /*{a-bdown-background-start}*/, #2c2c2c /*{a-bdown-background-end}*/); /* Opera 11.10+ */
-	background-image:         linear-gradient( #202020 /*{a-bdown-background-start}*/, #2c2c2c /*{a-bdown-background-end}*/);
+	color: 					#3398CC /*{a-bdown-color}*/;
+	text-shadow: 0 /*{a-bdown-shadow-x}*/ 1px /*{a-bdown-shadow-y}*/ 1px /*{a-bdown-shadow-radius}*/ #3398CC /*{a-bdown-shadow-color}*/;
+	background-image: -webkit-gradient(linear, left top, left bottom, from( #3398CC /*{a-bdown-background-start}*/), to( #3398CC /*{a-bdown-background-end}*/)); /* Saf4+, Chrome */
+	background-image: -webkit-linear-gradient( #3398CC /*{a-bdown-background-start}*/, #3398CC /*{a-bdown-background-end}*/); /* Chrome 10+, Saf5.1+ */
+	background-image:    -moz-linear-gradient( #3398CC /*{a-bdown-background-start}*/, #3398CC /*{a-bdown-background-end}*/); /* FF3.6 */
+	background-image:     -ms-linear-gradient( #3398CC /*{a-bdown-background-start}*/, #3398CC /*{a-bdown-background-end}*/); /* IE10 */
+	background-image:      -o-linear-gradient( #3398CC /*{a-bdown-background-start}*/, #3398CC /*{a-bdown-background-end}*/); /* Opera 11.10+ */
+	background-image:         linear-gradient( #3398CC /*{a-bdown-background-start}*/, #3398CC /*{a-bdown-background-end}*/);
 }
 .ui-btn-down-f:visited,
 .ui-btn-down-f:hover,
@@ -149,32 +149,32 @@
 	text-decoration: none;
 }
 .ui-bar-b {
-	border: 1px solid 		#b01f24 /*{b-bar-border}*/;
-	background: 			#b01f24 /*{b-bar-background-color}*/;
+	border: 1px solid 		#3398CC /*{b-bar-border}*/;
+	background: 			#3398CC /*{b-bar-background-color}*/;
 	color: 					#F8F8F8 /*{b-bar-color}*/;
 	font-weight: bold;
 	text-shadow: 0 /*{b-bar-shadow-x}*/ 1px /*{b-bar-shadow-y}*/ 1px /*{b-bar-shadow-radius}*/ #3e6790 /*{b-bar-shadow-color}*/;
-	background-image: -webkit-gradient(linear, left top, left bottom, from( #b01f24 /*{b-bar-background-start}*/), to( #b01f24 /*{b-bar-background-end}*/)); /* Saf4+, Chrome */
-	background-image: -webkit-linear-gradient( #b01f24 /*{b-bar-background-start}*/, #b01f24 /*{b-bar-background-end}*/); /* Chrome 10+, Saf5.1+ */
-	background-image:    -moz-linear-gradient( #b01f24 /*{b-bar-background-start}*/, #b01f24 /*{b-bar-background-end}*/); /* FF3.6 */
-	background-image:     -ms-linear-gradient( #b01f24 /*{b-bar-background-start}*/, #b01f24 /*{b-bar-background-end}*/); /* IE10 */
-	background-image:      -o-linear-gradient( #b01f24 /*{b-bar-background-start}*/, #b01f24 /*{b-bar-background-end}*/); /* Opera 11.10+ */
-	background-image:         linear-gradient( #b01f24 /*{b-bar-background-start}*/, #b01f24 /*{b-bar-background-end}*/);
+	background-image: -webkit-gradient(linear, left top, left bottom, from( #3398CC /*{b-bar-background-start}*/), to( #3398CC /*{b-bar-background-end}*/)); /* Saf4+, Chrome */
+	background-image: -webkit-linear-gradient( #3398CC /*{b-bar-background-start}*/, #3398CC /*{b-bar-background-end}*/); /* Chrome 10+, Saf5.1+ */
+	background-image:    -moz-linear-gradient( #3398CC /*{b-bar-background-start}*/, #3398CC /*{b-bar-background-end}*/); /* FF3.6 */
+	background-image:     -ms-linear-gradient( #3398CC /*{b-bar-background-start}*/, #3398CC /*{b-bar-background-end}*/); /* IE10 */
+	background-image:      -o-linear-gradient( #3398CC /*{b-bar-background-start}*/, #3398CC /*{b-bar-background-end}*/); /* Opera 11.10+ */
+	background-image:         linear-gradient( #3398CC /*{b-bar-background-start}*/, #3398CC /*{b-bar-background-end}*/);
 }
 .ui-btn-active {
-	border: 1px solid 		#b01f24 /*{global-active-border}*/;
-	background: 			#b01f24 /*{global-active-background-color}*/;
+	border: 1px solid 		#3398CC /*{global-active-border}*/;
+	background: 			#3398CC /*{global-active-background-color}*/;
 	font-weight: bold;
 	color: 					#fff /*{global-active-color}*/;
 	cursor: pointer;
 	text-shadow: 0 /*{global-active-shadow-x}*/ 1px /*{global-active-shadow-y}*/ 1px /*{global-active-shadow-radius}*/ #3373a5 /*{global-active-shadow-color}*/;
 	text-decoration: none;
-	background-image: -webkit-gradient(linear, left top, left bottom, from( #b01f24 /*{global-active-background-start}*/), to( #b01f24 /*{global-active-background-end}*/)); /* Saf4+, Chrome */
-	background-image: -webkit-linear-gradient( #b01f24 /*{global-active-background-start}*/, #b01f24 /*{global-active-background-end}*/); /* Chrome 10+, Saf5.1+ */
-	background-image:    -moz-linear-gradient( #b01f24 /*{global-active-background-start}*/, #b01f24 /*{global-active-background-end}*/); /* FF3.6 */
-	background-image:     -ms-linear-gradient( #b01f24 /*{global-active-background-start}*/, #b01f24 /*{global-active-background-end}*/); /* IE10 */
-	background-image:      -o-linear-gradient( #b01f24 /*{global-active-background-start}*/, #b01f24 /*{global-active-background-end}*/); /* Opera 11.10+ */
-	background-image:         linear-gradient( #b01f24 /*{global-active-background-start}*/, #b01f24 /*{global-active-background-end}*/);
+	background-image: -webkit-gradient(linear, left top, left bottom, from( #3398CC /*{global-active-background-start}*/), to( #3398CC /*{global-active-background-end}*/)); /* Saf4+, Chrome */
+	background-image: -webkit-linear-gradient( #3398CC /*{global-active-background-start}*/, #3398CC /*{global-active-background-end}*/); /* Chrome 10+, Saf5.1+ */
+	background-image:    -moz-linear-gradient( #3398CC /*{global-active-background-start}*/, #3398CC /*{global-active-background-end}*/); /* FF3.6 */
+	background-image:     -ms-linear-gradient( #3398CC /*{global-active-background-start}*/, #3398CC /*{global-active-background-end}*/); /* IE10 */
+	background-image:      -o-linear-gradient( #3398CC /*{global-active-background-start}*/, #3398CC /*{global-active-background-end}*/); /* Opera 11.10+ */
+	background-image:         linear-gradient( #3398CC /*{global-active-background-start}*/, #3398CC /*{global-active-background-end}*/);
 	font-family: Helvetica, Arial, sans-serif /*{global-font-family}*/;
 }
 .ui-btn-active:visited,
@@ -182,7 +182,4 @@
 .ui-btn-active a.ui-link-inherit {
 	color: 					#fff /*{global-active-color}*/;
 }
-
-.ui-loading .ui-loader {
-display: none;
-}
+/* button inner top highlight
