--- a/assets/jquery.mobile-sugon.css
+++ b/assets/jquery.mobile-sugon.css
@@ -12,6 +12,15 @@
 /* Swatches */
 /* f
 -----------------------------------------------------------------------------------------------------------*/
+*{
+	font-size: 15px;font-family: Microsoft YaHei;
+}
+.fontdividerstyle{
+	color: black !important;font-size: 16px !important;font-family: Microsoft YaHei !important;text-shadow: none !important;
+}
+.fontstyle{
+	font-size: 15px !important;font-family: Microsoft YaHei !important;
+}
 .ui-corner-all{
 	-webkit-border-radius: 0em;
 	border-radius: 0em;
@@ -21,17 +30,17 @@
 	border-radius: 0em;
 }
 .ui-bar-f {
-	border: 1px solid 		#2e4c92 /*{a-bar-border}*/;
-	background: 			#2e4c92 /*{a-bar-background-color}*/;
+	border: 1px solid 		#2484e8 /*{a-bar-border}*/;
+	background: 			#2484e8 /*{a-bar-background-color}*/;
 	color: 					#F8F5F5 /*{a-bar-color}*/;
 	font-weight: bold;
 	text-shadow: 0 /*{a-bar-shadow-x}*/ -1px /*{a-bar-shadow-y}*/ 1px /*{a-bar-shadow-radius}*/ #000 /*{a-bar-shadow-color}*/;
-	background-image: -webkit-gradient(linear, left top, left bottom, from( #2e4c92 /*{a-bar-background-start}*/), to( #2e4c92 /*{a-bar-background-end}*/)); /* Saf4+, Chrome */
-	background-image: -webkit-linear-gradient( #2e4c92 /*{a-bar-background-start}*/, #2e4c92 /*{a-bar-background-end}*/); /* Chrome 10+, Saf5.1+ */
-	background-image:    -moz-linear-gradient( #2e4c92 /*{a-bar-background-start}*/, #2e4c92 /*{a-bar-background-end}*/); /* FF3.6 */
-	background-image:     -ms-linear-gradient( #2e4c92 /*{a-bar-background-start}*/, #2e4c92 /*{a-bar-background-end}*/); /* IE10 */
-	background-image:      -o-linear-gradient( #2e4c92 /*{a-bar-background-start}*/, #2e4c92 /*{a-bar-background-end}*/); /* Opera 11.10+ */
-	background-image:         linear-gradient( #2e4c92 /*{a-bar-background-start}*/, #2e4c92 /*{a-bar-background-end}*/);
+	background-image: -webkit-gradient(linear, left top, left bottom, from( #2484e8 /*{a-bar-background-start}*/), to( #2484e8 /*{a-bar-background-end}*/)); /* Saf4+, Chrome */
+	background-image: -webkit-linear-gradient( #2484e8 /*{a-bar-background-start}*/, #2484e8 /*{a-bar-background-end}*/); /* Chrome 10+, Saf5.1+ */
+	background-image:    -moz-linear-gradient( #2484e8 /*{a-bar-background-start}*/, #2484e8 /*{a-bar-background-end}*/); /* FF3.6 */
+	background-image:     -ms-linear-gradient( #2484e8 /*{a-bar-background-start}*/, #2484e8 /*{a-bar-background-end}*/); /* IE10 */
+	background-image:      -o-linear-gradient( #2484e8 /*{a-bar-background-start}*/, #2484e8 /*{a-bar-background-end}*/); /* Opera 11.10+ */
+	background-image:         linear-gradient( #2484e8 /*{a-bar-background-start}*/, #2484e8 /*{a-bar-background-end}*/);
 }
 .ui-bar-f,
 .ui-bar-f input,
@@ -98,34 +107,34 @@
 	color: #2489ce /*{a-body-link-active}*/;
 }
 .ui-btn-up-f {
-	border: 1px solid 		#2e4c92 /*{c-bup-border}*/;
-	background: 			#2e4c92 /*{c-bup-background-color}*/;
+	border: 1px solid 		#2484e8 /*{c-bup-border}*/;
+	background: 			#2484e8 /*{c-bup-background-color}*/;
 	font-weight: bold;
 	color: 					#F8F5F5 /*{c-bup-color}*/;
-	text-shadow: 0 /*{c-bup-shadow-x}*/ 1px /*{c-bup-shadow-y}*/ 0 /*{c-bup-shadow-radius}*/ #2e4c92 /*{c-bup-shadow-color}*/;
-	background-image: -webkit-gradient(linear, left top, left bottom, from( #2e4c92 /*{c-bup-background-start}*/), to( #2e4c92 /*{c-bup-background-end}*/)); /* Saf4+, Chrome */
-	background-image: -webkit-linear-gradient( #2e4c92 /*{c-bup-background-start}*/, #2e4c92 /*{c-bup-background-end}*/); /* Chrome 10+, Saf5.1+ */
-	background-image:    -moz-linear-gradient( #2e4c92 /*{c-bup-background-start}*/, #2e4c92 /*{c-bup-background-end}*/); /* FF3.6 */
-	background-image:     -ms-linear-gradient( #2e4c92 /*{c-bup-background-start}*/, #2e4c92 /*{c-bup-background-end}*/); /* IE10 */
-	background-image:      -o-linear-gradient( #2e4c92 /*{c-bup-background-start}*/, #2e4c92 /*{c-bup-background-end}*/); /* Opera 11.10+ */
-	background-image:         linear-gradient( #2e4c92 /*{c-bup-background-start}*/, #2e4c92 /*{c-bup-background-end}*/);
+	text-shadow: 0 /*{c-bup-shadow-x}*/ 0px /*{c-bup-shadow-y}*/ 0 /*{c-bup-shadow-radius}*/ black /*{c-bup-shadow-color}*/;
+	background-image: -webkit-gradient(linear, left top, left bottom, from( #2484e8 /*{c-bup-background-start}*/), to( #2484e8 /*{c-bup-background-end}*/)); /* Saf4+, Chrome */
+	background-image: -webkit-linear-gradient( #2484e8 /*{c-bup-background-start}*/, #2484e8 /*{c-bup-background-end}*/); /* Chrome 10+, Saf5.1+ */
+	background-image:    -moz-linear-gradient( #2484e8 /*{c-bup-background-start}*/, #2484e8 /*{c-bup-background-end}*/); /* FF3.6 */
+	background-image:     -ms-linear-gradient( #2484e8 /*{c-bup-background-start}*/, #2484e8 /*{c-bup-background-end}*/); /* IE10 */
+	background-image:      -o-linear-gradient( #2484e8 /*{c-bup-background-start}*/, #2484e8 /*{c-bup-background-end}*/); /* Opera 11.10+ */
+	background-image:         linear-gradient( #2484e8 /*{c-bup-background-start}*/, #2484e8 /*{c-bup-background-end}*/);
 }
 .ui-btn-up-f:visited,
 .ui-btn-up-f a.ui-link-inherit {
 	color: 					#fff /*{a-bup-color}*/;
 }
 .ui-btn-hover-f {
-	border: 1px solid 		#2e4c92 /*{a-bhover-border}*/;
-	background: 			#2e4c92 /*{a-bhover-background-color}*/;
+	border: 1px solid 		#2484e8 /*{a-bhover-border}*/;
+	background: 			#2484e8 /*{a-bhover-background-color}*/;
 	font-weight: bold;
 	color: 					#F8F5F5 /*{a-bhover-color}*/;
 	text-shadow: 0 /*{a-bhover-shadow-x}*/ 1px /*{a-bhover-shadow-y}*/ 1px /*{a-bhover-shadow-radius}*/ #111 /*{a-bhover-shadow-color}*/;
-	background-image: -webkit-gradient(linear, left top, left bottom, from( #2e4c92 /*{a-bhover-background-start}*/), to( #2e4c92 /*{a-bhover-background-end}*/)); /* Saf4+, Chrome */
-	background-image: -webkit-linear-gradient( #2e4c92 /*{a-bhover-background-start}*/, #2e4c92 /*{a-bhover-background-end}*/); /* Chrome 10+, Saf5.1+ */
-	background-image:    -moz-linear-gradient( #2e4c92 /*{a-bhover-background-start}*/, #2e4c92 /*{a-bhover-background-end}*/); /* FF3.6 */
-	background-image:     -ms-linear-gradient( #2e4c92 /*{a-bhover-background-start}*/, #2e4c92 /*{a-bhover-background-end}*/); /* IE10 */
-	background-image:      -o-linear-gradient( #2e4c92 /*{a-bhover-background-start}*/, #2e4c92 /*{a-bhover-background-end}*/); /* Opera 11.10+ */
-	background-image:         linear-gradient( #2e4c92 /*{a-bhover-background-start}*/, #2e4c92 /*{a-bhover-background-end}*/);
+	background-image: -webkit-gradient(linear, left top, left bottom, from( #2484e8 /*{a-bhover-background-start}*/), to( #2484e8 /*{a-bhover-background-end}*/)); /* Saf4+, Chrome */
+	background-image: -webkit-linear-gradient( #2484e8 /*{a-bhover-background-start}*/, #2484e8 /*{a-bhover-background-end}*/); /* Chrome 10+, Saf5.1+ */
+	background-image:    -moz-linear-gradient( #2484e8 /*{a-bhover-background-start}*/, #2484e8 /*{a-bhover-background-end}*/); /* FF3.6 */
+	background-image:     -ms-linear-gradient( #2484e8 /*{a-bhover-background-start}*/, #2484e8 /*{a-bhover-background-end}*/); /* IE10 */
+	background-image:      -o-linear-gradient( #2484e8 /*{a-bhover-background-start}*/, #2484e8 /*{a-bhover-background-end}*/); /* Opera 11.10+ */
+	background-image:         linear-gradient( #2484e8 /*{a-bhover-background-start}*/, #2484e8 /*{a-bhover-background-end}*/);
 }
 .ui-btn-hover-f:visited,
 .ui-btn-hover-f:hover,
@@ -133,17 +142,17 @@
 	color: 					#fff /*{a-bhover-color}*/;
 }
 .ui-btn-down-f {
-	border: 1px solid 		#2e4c92 /*{a-bdown-border}*/;
-	background: 			#2e4c92 /*{a-bdown-background-color}*/;
+	border: 1px solid 		#2484e8 /*{a-bdown-border}*/;
+	background: 			#2484e8 /*{a-bdown-background-color}*/;
 	font-weight: bold;
-	color: 					#2e4c92 /*{a-bdown-color}*/;
-	text-shadow: 0 /*{a-bdown-shadow-x}*/ 1px /*{a-bdown-shadow-y}*/ 1px /*{a-bdown-shadow-radius}*/ #2e4c92 /*{a-bdown-shadow-color}*/;
-	background-image: -webkit-gradient(linear, left top, left bottom, from( #2e4c92 /*{a-bdown-background-start}*/), to( #2e4c92 /*{a-bdown-background-end}*/)); /* Saf4+, Chrome */
-	background-image: -webkit-linear-gradient( #2e4c92 /*{a-bdown-background-start}*/, #2e4c92 /*{a-bdown-background-end}*/); /* Chrome 10+, Saf5.1+ */
-	background-image:    -moz-linear-gradient( #2e4c92 /*{a-bdown-background-start}*/, #2e4c92 /*{a-bdown-background-end}*/); /* FF3.6 */
-	background-image:     -ms-linear-gradient( #2e4c92 /*{a-bdown-background-start}*/, #2e4c92 /*{a-bdown-background-end}*/); /* IE10 */
-	background-image:      -o-linear-gradient( #2e4c92 /*{a-bdown-background-start}*/, #2e4c92 /*{a-bdown-background-end}*/); /* Opera 11.10+ */
-	background-image:         linear-gradient( #2e4c92 /*{a-bdown-background-start}*/, #2e4c92 /*{a-bdown-background-end}*/);
+	color: 					#2484e8 /*{a-bdown-color}*/;
+	text-shadow: 0 /*{a-bdown-shadow-x}*/ 1px /*{a-bdown-shadow-y}*/ 0px /*{a-bdown-shadow-radius}*/ #2484e8 /*{a-bdown-shadow-color}*/;
+	background-image: -webkit-gradient(linear, left top, left bottom, from( #2484e8 /*{a-bdown-background-start}*/), to( #2484e8 /*{a-bdown-background-end}*/)); /* Saf4+, Chrome */
+	background-image: -webkit-linear-gradient( #2484e8 /*{a-bdown-background-start}*/, #2484e8 /*{a-bdown-background-end}*/); /* Chrome 10+, Saf5.1+ */
+	background-image:    -moz-linear-gradient( #2484e8 /*{a-bdown-background-start}*/, #2484e8 /*{a-bdown-background-end}*/); /* FF3.6 */
+	background-image:     -ms-linear-gradient( #2484e8 /*{a-bdown-background-start}*/, #2484e8 /*{a-bdown-background-end}*/); /* IE10 */
+	background-image:      -o-linear-gradient( #2484e8 /*{a-bdown-background-start}*/, #2484e8 /*{a-bdown-background-end}*/); /* Opera 11.10+ */
+	background-image:         linear-gradient( #2484e8 /*{a-bdown-background-start}*/, #2484e8 /*{a-bdown-background-end}*/);
 }
 .ui-btn-down-f:visited,
 .ui-btn-down-f:hover,
@@ -157,32 +166,32 @@
 	text-decoration: none;
 }
 .ui-bar-b {
-	border: 1px solid 		#2e4c92 /*{b-bar-border}*/;
-	background: 			#2e4c92 /*{b-bar-background-color}*/;
+	border: 1px solid 		#2484e8 /*{b-bar-border}*/;
+	background: 			#2484e8 /*{b-bar-background-color}*/;
 	color: 					#F8F8F8 /*{b-bar-color}*/;
 	font-weight: bold;
-	text-shadow: 0 /*{b-bar-shadow-x}*/ 1px /*{b-bar-shadow-y}*/ 1px /*{b-bar-shadow-radius}*/ #3e6790 /*{b-bar-shadow-color}*/;
-	background-image: -webkit-gradient(linear, left top, left bottom, from( #2e4c92 /*{b-bar-background-start}*/), to( #2e4c92 /*{b-bar-background-end}*/)); /* Saf4+, Chrome */
-	background-image: -webkit-linear-gradient( #2e4c92 /*{b-bar-background-start}*/, #2e4c92 /*{b-bar-background-end}*/); /* Chrome 10+, Saf5.1+ */
-	background-image:    -moz-linear-gradient( #2e4c92 /*{b-bar-background-start}*/, #2e4c92 /*{b-bar-background-end}*/); /* FF3.6 */
-	background-image:     -ms-linear-gradient( #2e4c92 /*{b-bar-background-start}*/, #2e4c92 /*{b-bar-background-end}*/); /* IE10 */
-	background-image:      -o-linear-gradient( #2e4c92 /*{b-bar-background-start}*/, #2e4c92 /*{b-bar-background-end}*/); /* Opera 11.10+ */
-	background-image:         linear-gradient( #2e4c92 /*{b-bar-background-start}*/, #2e4c92 /*{b-bar-background-end}*/);
+	text-shadow: 0 /*{b-bar-shadow-x}*/ 1px /*{b-bar-shadow-y}*/ 0px /*{b-bar-shadow-radius}*/ black /*{b-bar-shadow-color}*/;
+	background-image: -webkit-gradient(linear, left top, left bottom, from( #2484e8 /*{b-bar-background-start}*/), to( #2484e8 /*{b-bar-background-end}*/)); /* Saf4+, Chrome */
+	background-image: -webkit-linear-gradient( #2484e8 /*{b-bar-background-start}*/, #2484e8 /*{b-bar-background-end}*/); /* Chrome 10+, Saf5.1+ */
+	background-image:    -moz-linear-gradient( #2484e8 /*{b-bar-background-start}*/, #2484e8 /*{b-bar-background-end}*/); /* FF3.6 */
+	background-image:     -ms-linear-gradient( #2484e8 /*{b-bar-background-start}*/, #2484e8 /*{b-bar-background-end}*/); /* IE10 */
+	background-image:      -o-linear-gradient( #2484e8 /*{b-bar-background-start}*/, #2484e8 /*{b-bar-background-end}*/); /* Opera 11.10+ */
+	background-image:         linear-gradient( #2484e8 /*{b-bar-background-start}*/, #2484e8 /*{b-bar-background-end}*/);
 }
 .ui-btn-active {
-	border: 1px solid 		#2e4c92 /*{global-active-border}*/;
-	background: 			#2e4c92 /*{global-active-background-color}*/;
+	border: 1px solid 		#2484e8 /*{global-active-border}*/;
+	background: 			#2484e8 /*{global-active-background-color}*/;
 	font-weight: bold;
 	color: 					#fff /*{global-active-color}*/;
 	cursor: pointer;
 	text-shadow: 0 /*{global-active-shadow-x}*/ 1px /*{global-active-shadow-y}*/ 1px /*{global-active-shadow-radius}*/ #3373a5 /*{global-active-shadow-color}*/;
 	text-decoration: none;
-	background-image: -webkit-gradient(linear, left top, left bottom, from( #2e4c92 /*{global-active-background-start}*/), to( #2e4c92 /*{global-active-background-end}*/)); /* Saf4+, Chrome */
-	background-image: -webkit-linear-gradient( #2e4c92 /*{global-active-background-start}*/, #2e4c92 /*{global-active-background-end}*/); /* Chrome 10+, Saf5.1+ */
-	background-image:    -moz-linear-gradient( #2e4c92 /*{global-active-background-start}*/, #2e4c92 /*{global-active-background-end}*/); /* FF3.6 */
-	background-image:     -ms-linear-gradient( #2e4c92 /*{global-active-background-start}*/, #2e4c92 /*{global-active-background-end}*/); /* IE10 */
-	background-image:      -o-linear-gradient( #2e4c92 /*{global-active-background-start}*/, #2e4c92 /*{global-active-background-end}*/); /* Opera 11.10+ */
-	background-image:         linear-gradient( #2e4c92 /*{global-active-background-start}*/, #2e4c92 /*{global-active-background-end}*/);
+	background-image: -webkit-gradient(linear, left top, left bottom, from( #2484e8 /*{global-active-background-start}*/), to( #2484e8 /*{global-active-background-end}*/)); /* Saf4+, Chrome */
+	background-image: -webkit-linear-gradient( #2484e8 /*{global-active-background-start}*/, #2484e8 /*{global-active-background-end}*/); /* Chrome 10+, Saf5.1+ */
+	background-image:    -moz-linear-gradient( #2484e8 /*{global-active-background-start}*/, #2484e8 /*{global-active-background-end}*/); /* FF3.6 */
+	background-image:     -ms-linear-gradient( #2484e8 /*{global-active-background-start}*/, #2484e8 /*{global-active-background-end}*/); /* IE10 */
+	background-image:      -o-linear-gradient( #2484e8 /*{global-active-background-start}*/, #2484e8 /*{global-active-background-end}*/); /* Opera 11.10+ */
+	background-image:         linear-gradient( #2484e8 /*{global-active-background-start}*/, #2484e8 /*{global-active-background-end}*/);
 	font-family: Helvetica, Arial, sans-serif /*{global-font-family}*/;
 }
 .ui-btn-active:visited,
